--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,14 @@
-
+.editor {
+    border: solid 1px gray;
+    width: 300px;
+    height: 100px;
+    padding: 6px;
+    overflow: scroll;
+    font-size: 0.85rem;
+  }
+  [contenteditable][placeholder]:empty:before {
+    content: attr(placeholder);
+    position: absolute;
+    color: gray;
+    background-color: transparent;
+  }
